--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
-build_flags = -DARDUINO_USB_MODE=0 -DXK_INVERT_ROTATION=1 -DXK_MQTT=0
+build_flags = -DARDUINO_USB_MODE=0 -DXK_INVERT_ROTATION=1 -DXK_MQTT=1
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.10.7
 	moononournation/GFX Library for Arduino@1.2.1
@@ -21,4 +21,4 @@ lib_deps =
 	https://github.com/bblanchon/ArduinoJson
 	https://github.com/me-no-dev/AsyncTCP
 	https://github.com/me-no-dev/ESPAsyncWebServer
-
+	kitesurfer1404/WS2812FX@^1.4.2
